# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Accelerators.cpp  Image.hpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mesh.hpp  Primitive.cpp  Primitive.h  Primitive.hpp  Threading.hpp  Utils.hpp  main.cpp
